# Automatisor-App

./: .env.example  .gitignore  CODEBASE_TECHNICAL_REPORT.md  chatbot_converstaion.json  new_propmt.md  package-lock.json  package.json  pyproject.toml  text.md  vercel.json
Docs/: CHATBOT_IMPLEMENTATION.md  CODEBASE_TECHNICAL_REPORT.md  REPORT_SHARING_IMPLEMENTATION.md  STRIPE_IMPLEMENTATION.md  automatisor_chatbot_share_migration.sql  chatbot_flow.mmd  stripe_customer_portal_payment_method_findings (1).md
backend/: .env.example  address_normalization.py  address_validator.py  chat.py  chat_prompt.py  main.py  requirements.txt  run_sample_backfill.py  test_address_validator.py  test_auth_otp_http.py  test_auth_refresh.py  test_chat_safety.py  test_chat_sharing.py  test_report_sharing.py  test_share_flows.py  test_share_source_lookup.py  test_site_recommendations.py  test_trusted_auth.py  test_wishlist_notes.py  test_wishlist_removal.py
backend/sample-report/: br_williams_all.json  br_williams_high.json  data_structure.json
backend/scripts/: link_stripe_customers.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/public/css/: styles.css
frontend/src/: App.jsx  BillingPage.jsx  ChatWidget.jsx  CreditsPage.jsx  PrivacyContent.jsx  ShareChatDialog.jsx  ShareReportDialog.jsx  TermsContent.jsx  legalDocumentContent.jsx  main.jsx  privacy.html  report_section_structure.json  terms.html
