[project]
name = "automatisor"
version = "0.1.0"
description = ""
authors = [
    {name = "Ishaan",email = "ishaanvashista@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (==0.115.12)",
    "uvicorn (==0.34.2)",
    "httpx (==0.28.1)",
    "python-dotenv (==1.0.1)",
    "supabase (==2.15.3)",
    "stripe (>=15.2.0,<16.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
